fix(css): team menu overflowing on mobile screens

--- a/client/css/namerio.css
+++ b/client/css/namerio.css
@@ -22,3 +22,8 @@
         margin-right: -83px !important;
     }
 }
+
+/* @TODO: merge these upstream          */
+#team-menu-members {
+    height: auto !important;
+}
